yaml/old-yaml/jazzhands-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jazzhands-deployment
  namespace: jazzhands
  labels:
    app: jazzhands
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jazzhands
  template:
    metadata:
      labels:
        app: jazzhands
    spec:
      containers:
      - name: jazzhands
        image: davekrier/jazzhands
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
