yaml/old-yaml/jazhands-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jazzhands-service
  namespace: jazzhands
spec:
  selector:
    app: jazzhands
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort
