yaml/old-yaml/jazhands-svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: jazzhands-service-clusterip
  namespace: jazzhands
  labels:
    app: jazzhands
spec:
  selector:
    app: jazzhands
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 3000
  sessionAffinity: None
  type: ClusterIP
