yaml/old-yaml/jazzhands-lb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: jazzhands
    tier: frontend
  name: jazzhands-lb-svc
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: jazzhands
    tier: frontend
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
