yaml/old-yaml/jazzhands-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: jazzhands-service2
  namespace: jazzhands
spec:
  selector:
    app: jazzhands
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
  type: NodePort
