yaml/old-yaml/oc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: jazzhands-svc
  labels:
    app: jazzhands
    tier: frontend
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  loadBalancerIP:
  selector:
    app: jazzhands
    tier: frontend
  type: LoadBalancer
