yaml/old-yaml/jazzhands-all-in-one-os.yaml

# Deploymnt of application with 2 replicas
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jazzhands-deployment
spec:
  replicas: 2 # tells deployment to run 2 pods matching the template
  selector:
    matchLabels:
      app: jazzhands
  template:   # create pods using pod definition in this template
    metadata:
      labels:
        app: jazzhands
        tier: frontend
    spec:
      containers:
      - name: jazzhands
        image: davekrier/jazzhands
        imagePullPolicy: Always
---

# NodePort Service to expose frontend - Used in the ingress and for testing
apiVersion: v1
kind: Service
metadata:
  name: jazzhands-svc
  labels:
    app: jazzhands
    tier: frontend
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
  selector:
    app: jazzhands
    tier: frontend
  type: NodePort

---

# Route for OS - Doesn't seem to work using kubectl
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jazzhands-route
  creationTimestamp: null
  labels:
    app: jazzhands
    tier: frontend
spec:
  port:
    targetPort: 3000
  to:
    name: jazzhands-svc
    weight: 100
status:
  ingress: null

---
apiVersion: v1
kind: Service
metadata:
  name: jazzhands-lb
  labels:
    app: jazzhands
    tier: frontend
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  loadBalancerIP:
  selector:
    app: jazzhands
    tier: frontend
  type: LoadBalancer
